web/skins/classic/css/base/skin.css
/* ... */
#framesTable .zoom {
  transform-origin: 100% 0%;
}

a.flip {
  float: right;
  padding-right: 5px;
}

#content table.major .colDiskSpace {
  text-align: right;
}

#modalLogout .modal-dialog {
  height: 100%;
}
#modalLogout .modal-content {
  height: 90%;
}
#modalLogout .modal-body {
  overflow:auto;
}
#getAccountCircleHTML {
  padding: 4px 0 0 0;
}
#logoutButton {
  color: white;
  padding: 4px 10px 7px 10px;
}
#stateModalBtn {
  padding: 5px 10px 4px 10px;
}
#shutdownButton {
  padding: 4px 10px 4px 10px;
  color: white;
}
.imageFeed {
  margin: 0 auto;
  text-align: center;
  /*
  vertical-align: middle;
  */
  position: relative;
}
.imageFeed img,
.imageFeed video,
.imageFeed svg {
  margin: 0;
  padding: 0;
  border-radius: 0;
  display: block;
  width: 100%;
  /*
  height: 100%;
  */
  border: 2px solid #ffffff;
}
.imageFeed svg {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background: none;
}
.monitor {
  position: relative;
}
.monitor:after {
  clear: both;
}

.monitor .monitorStatus.bottom {
  color: #dddddd;
}

.monitor.idle img, .monitor.idle .imageFeed {
  border: 2px solid #ffffff;
}

.monitor.alarm img, .monitor.alarm .imageFeed {
  border: 2px solid #ff0000;
}

.monitor.alert img, .monitor.alert .imageFeed {
  border: 2px solid #ffa500;
}
.monitor.alert {
  color: #ffa500;
  padding: 0;
  border-radius: 0;
  border: none;
}
.controlHeader, #fieldsTable {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
/* to match chosen text input height */
.controlHeader input[type="text"] {
  height: 29px;
  padding: 2px 5px 4px 5px;
  margin-top:0;
  width: 100%;
}
@media screen and (max-width:767px) {
  .controlHeader {
    display: flex;
    flex-wrap: wrap;
  }
}
#fieldsTable ul.chosen-choices {
  max-height: 100px;
  overflow-y:auto;
}
.search .form-control {
  font-size: 100%;
}

button .material-icons {
  font-size: 18px;
}

/* input[type="search"]::-webkit-search-cancel-button {
  display: none;
} */

.tags-container {
  display: flex;
  flex-wrap: wrap;
  border: 1px solid;
  border-color: #ccc;
  border-radius: 4px;
  min-height: 35px;
  margin: 0.25rem 1rem 0.25rem 1rem;
}

.tag {
  background-color: #F0F0F0;
  border-radius: 12px;
  padding: 4px 8px;
  margin: 4px;
  display: flex;
  align-items: center;
}

.tag-text {
  margin-right: 4px;
}

.tag-remove {
  cursor: pointer;
  color: red;
}

.tag-input {
  height: 30px;
  margin-left: 8px;
  border: none;
  width: 100%;
}

.tag-input:focus {
  outline: none;
}

.tag-dropdown {
  vertical-align: center;
  margin-right: 8px;
  display: inline-block;
  flex-grow: 2;
}

.tag-dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 15;
  padding: 4px 0;
  overflow-y: auto;
  max-height: 800px;
}

.tag-dropdown-item {
  cursor: pointer;
  padding: 4px 8px;
  margin-bottom: 4px;
}

.tag-dropdown-item:hover {
  background-color: #dfdfdf;
}

.hlight{
  background:#dfdfdf;
}

.tag-input:focus + .tag-dropdown-content,
.tag-input + .tag-dropdown-content:active {
  display: block;
}

/* Change scrollbar style */
div::-webkit-scrollbar, nav::-webkit-scrollbar, .chosen-results::-webkit-scrollbar {
  width: 11px;
  height: 11px;
}

div, nav, .chosen-results {
  scrollbar-width: thin;
  scrollbar-color: var(--sliderBG) var(--scrollbarBG);
}

div::-webkit-scrollbar-track, nav::-webkit-scrollbar-track, .chosen-results::-webkit-scrollbar-track {
  background: var(--scrollbarBG);
}

div::-webkit-scrollbar-thumb, nav::-webkit-scrollbar-thumb, .chosen-results::-webkit-scrollbar-thumb {
  background-color: var(--sliderBG);
  border-radius: 6px;
  border: 3px solid var(--scrollbarBG);
}

.term {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
}

@media screen and (max-width:500px) {
  .term {
    width: 100% !important;
    flex-direction: row;
    margin-right: 15px;
    margin-bottom: 5px;
  }
  .term-label-wrapper {
    text-wrap: nowrap;
    margin-top: 7px;
    margin-right: 5px;
  }
  .term-value-wrapper {
    width: 100%;
    flex-grow: 1;
  }
  .term-value-wrapper .chosen-container {
    width: 100% !important;
  }
  label {
    text-wrap: nowrap;
  }
  input.hasDatepicker {
    max-width: 100%;
    width: 100%;
  }
}

